--- a/polliisi.html
+++ b/polliisi.html
@@ -63,27 +63,29 @@
 
 <!-- GALLUP TEMPLATE --> 
 <div id="gallupTemplate" style="display: none;">
-    <div class="col border pb-3 rounded-2 mt-4 ">
-      <button type="button" id="close6" class="btn-close btn-close-white mt-1" aria-label="Close" onclick="closeGallup(this)"></button>
-      <h3 id="gallupQuestion"></h3>
-      <input type="text" class="border-1 rounded-2 text-center" id="newQuestion" placeholder=" Kysymys tähän + Enter">
-      <div class="form-check ms-5 me-5">
-        <input class="form-check-input" type="radio" name="flexRadio1" id="RadioOption1">
-        <label class="form-check-label fw-bold " for="RadioOption1">Joo</label>
+  <div class="container">
+      <div class="col border pb-3 rounded-2 mt-4 ">
+          <button type="button" id="close6" class="btn-close btn-close-white mt-1" aria-label="Close" onclick="closeGallup(this)"></button>
+          <h3 id="gallupQuestion"></h3>
+          <input type="text" class="border-1 rounded-2 text-center form-control" id="newQuestion" placeholder=" Kysymys tähän + Enter">
+          <div class="form-check ms-5 me-5">
+              <input class="form-check-input" type="radio" name="flexRadio1" id="RadioOption1">
+              <label class="form-check-label fw-bold " for="RadioOption1">Joo</label>
+          </div>
+          <div class="form-check ms-5 me-5">
+              <input class="form-check-input" type="radio" name="flexRadio1" id="RadioOption2">
+              <label class="form-check-label fw-bold text-danger " for="RadioOption2">En</label>
+          </div>
+          <br>
+          <div class="progress bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar bg-success" style="width: 50%">50% - Joo</div>
+          </div>
+          <p>Gallupin tilanne</p>
+          <button type="button" class="btn btn-primary mt-0 border-1 border-white" disabled onclick="vote('flexRadio1', 'RadioOption1', 'RadioOption2', this)">Vastaa</button>
       </div>
-      <div class="form-check ms-5 me-5">
-        <input class="form-check-input" type="radio" name="flexRadio1" id="RadioOption2">
-        <label class="form-check-label fw-bold text-danger " for="RadioOption2">En</label>
-      </div>
-      <br>
-      <div class="progress bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-        <div class="progress-bar bg-success" style="width: 50%">50% - Joo</div>
-      </div>
-      <p>Gallupin tilanne</p>
-      <button type="button" class="btn btn-primary mt-0 border-1 border-white" disabled onclick="vote('flexRadio1', 'RadioOption1', 'RadioOption2', this)">Vastaa</button>
-    </div>
   </div>
 </div>
+
 </div>
          
 <p>&nbsp;</p>
